--- a/src/App.css
+++ b/src/App.css
@@ -37,19 +37,54 @@
   }
 }
 
-.left-col {
+.left-col-card-purchase {
     float: left;
     width:30%;
-    text-align: center
+    text-align: center;
+    font-size: 26px
 }
-.center-col {
+.center-col-card-purchase {
     float: left;
     width: 35%;
     text-align: center;
+    font-size: 26px
 }
-.right-col {
+.right-col-card-purchase {
     float: left;
     width: 30%;
-    text-align: center
+    text-align: center;
+    font-size: 26px
 }
 
+.hr-line-purchase-card {
+  border-top: 4.2px solid #5F907D;
+  width: 90%;
+}
+
+.div-navbar-menu-under-card-purchase {
+  margin-top: 30;
+  margin-left: 50;
+  width: 1500
+}
+
+.navbar-menu-under-card-purchase{
+  background-color: #128056;
+}
+
+.nav-margin-purchase{
+  margin-left: 30px;
+  margin-right: 70px;
+  font-size: 20px;
+  color: white;
+  width: 70%
+}
+
+.text-margin-menu-purchase {
+  float: left;
+  width:33%;
+  font-size: 20px; 
+}
+
+.btn-menu-purchase {
+  width: 100%
+}
