--- a/src/App.css
+++ b/src/App.css
@@ -88,3 +88,17 @@
 .btn-menu-purchase {
   width: 100%
 }
+
+.my-custom-scrollbar {
+  position: relative;
+  height: 300px;
+  overflow: auto;
+}
+.table-wrapper-scroll-y {
+  display: block;
+}
+
+/* .table-striped-purchase>tbody>tr:nth-child(odd)>td,  */
+/* .table-striped-purchase>tbody>tr:nth-child(odd)>th { */
+    /* background-color: rgb(168, 240, 230); Choose your own color here */
+/* } */
